# resume-builder

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  start-docker-python-ai.bat  start-docker-spring-ai.bat  start-python-backend.bat  start-python-backend.ps1  stop-docker-stack.bat  stop-python-backend.ps1  tailwind.config.ts  vite.config.ts
python-ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
python-ai-backend/app/: __init__.py  main.py
python-ai-backend/app/api/: __init__.py
python-ai-backend/app/api/errors/: __init__.py  handlers.py
python-ai-backend/app/api/mappers/: __init__.py  audio_mapper.py  chat_mapper.py  interview_mapper.py  rag_mapper.py  realtime_mapper.py
python-ai-backend/app/api/routes/: __init__.py  audio.py  audio_routes.py  chat.py  chat_routes.py  interview.py  interview_routes.py  rag.py  rag_routes.py  realtime.py  realtime_routes.py
python-ai-backend/app/api/schemas/: audio.py  chat.py  interview.py  rag.py  realtime.py
python-ai-backend/app/application/dto/: __init__.py  audio_dto.py  chat_dto.py  interview_dto.py  rag_dto.py  realtime_dto.py
python-ai-backend/app/application/ports/: __init__.py  agent_runtime_port.py  audio_transcription_port.py  llm_port.py  (+6 more)
python-ai-backend/app/bootstrap/: __init__.py  container.py  dependencies.py
python-ai-backend/app/domain/: __init__.py
python-ai-backend/app/infrastructure/: __init__.py
(+202 files in other folders)
