# author: jf
[project]
name = "python-ai-backend"
version = "0.1.0"
description = "M1 minimal runnable Python AI backend for resume-builder"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "PyMySQL>=1.1.1,<2.0.0"
]

[project.optional-dependencies]
ai = [
  "langchain>=0.3.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "llama-index>=0.12.0,<1.0.0",
  "pyautogen>=0.2.0,<1.0.0",
  "pgvector>=0.3.0,<1.0.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8999
